re PR libfortran/66650 (libgfortran: warning: left shift of negative value [-Wshift-negative-value])

PR libgfortran/66650
	* libgfortran.h (GFC_DTYPE_SIZE_MASK): Rewrite to avoid
	"left shift of negative value" warning.

From-SVN: r226357